--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
     "size-limit": "^0.19.2",
     "ts-jest": "^23.1.3",
     "typescript": "^3.0.1"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "dist/data-resource.min.js",
+      "limit": "5 KB"
+    }
+  ]
 }
