--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "build": "rollup -c && size-limit",
     "dev": "rollup -c -w",
     "prepublish": "npm run build",
-    "format": "prettier --write 'src/**/*.ts'",
+    "format": "prettier --write '**/*.{js,json}'",
     "test": "jest",
     "size-limit": "size-limit"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "babel-core": "^6.26.3",
+    "@babel/core": "7.0.0-rc.3",
+    "@babel/preset-env": "7.0.0-rc.3",
     "babel-jest": "^23.4.2",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
     "rollup": "^0.64.1",
-    "rollup-plugin-typescript2": "^0.16.1",
+    "rollup-plugin-babel": "^4.0.0-beta.8",
     "rollup-plugin-uglify": "^4.0.0",
-    "size-limit": "^0.19.2",
-    "ts-jest": "^23.1.3",
-    "typescript": "^3.0.1"
+    "size-limit": "^0.19.2"
   },
   "size-limit": [
     {
       "path": "dist/data-resource.min.js",
       "limit": "1 KB"
     }
-  ]
+  ],
+  "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.3"
+  }
 }
